--- a/project_description/latex_documentation/model_description/model_description.tex
+++ b/project_description/latex_documentation/model_description/model_description.tex
@@ -10,7 +10,7 @@
 \subsection{Definicja problemu}
 
 Podany jest zbiór dróg oraz informacja o tym, które drogi się ze sobą przecinają. Drogi są podzielone na odcinki.
-Droga majnastępujące parametry:
+Droga następujące parametry:
 
 \begin{enumerate}  
 \item Unikalny numer
@@ -25,12 +25,19 @@ Podany jest zbiór aut, które mają następujące parametry:
 \item Unikalny numer auta
 \item Numer drogi na której się znajduje
 \item Numer odcinku drogi na której się znajduje
-\item Aktualna prędkość
+\item Aktualna prędkość. Prędkość to liczba odcinków drogi przejechana w jednym odcinku czasowym.
 \end{enumerate}
 
+Samochód może zwalniać lub przyspieszać o wartości 1 i 2.
 
-%Wizualizacja modelu:
+\newpage
+Wizualizacja modelu:
+\newline
 
-%\includegraphics{./model_description/model_example.eps}
+\includegraphics[width=0.9\textwidth]{./model_description/1.eps}
+\newline
+\newline
+
+Drogi są przedstawione w postaci punktów. Punkty w jednej drodze mają taki sam kolor. Pogrubione koła to samochody. Samochody jadące po jednej drodze mają ten sam kolor.
 
 \end{document}
