--- a/project_description/latex_documentation/state_of_art/state_of_art.tex
+++ b/project_description/latex_documentation/state_of_art/state_of_art.tex
@@ -13,7 +13,7 @@ W pracy przedstawione zostanie wykorzystanie rozszerzonej wersji algorytmu "A*" 
 
 \subsection{Motywacja}
 
-Koordynacja ruchu za pomocą rozszerzonego algorytmu "A*" powinna dzialać szybciej niż koordynacja ruchu za pomocą świateł drogowych. Wynika to z faktu, że bezpieczeństwo na skrzyżowania, gdzie ruch koordynowany jest za pomocą świateł drogowych jest zapewnione poprzez czekanie na świetle żółtym. Porównując to z rozwiązaniem, gdzie każdy kierowca otrzymuje plan, zgodnie z którym powinnien się poruszać - czas przeznaczony na bezpieczeństwo powinien być krótszy. Wynikiem tego, ruch na skrzyżowaniach powinien przebiegać sprawniej.
+Koordynacja ruchu za pomocą rozszerzonego algorytmu "A*" powinna działać szybciej niż koordynacja ruchu za pomocą świateł drogowych. Wynika to z faktu, że bezpieczeństwo na skrzyżowaniach, gdzie ruch koordynowany jest za pomocą świateł drogowych jest zapewnione poprzez czekanie na świetle żółtym. Porównując to z rozwiązaniem, gdzie każdy kierowca otrzymuje plan, zgodnie z którym powinien się poruszać - czas przeznaczony na bezpieczeństwo powinien być krótszy. Wynikiem tego, ruch na skrzyżowaniach powinien przebiegać sprawniej.
 
 
 \subsection{Finalne rozwiązanie}
