--- a/project_description/latex_documentation/main.tex
+++ b/project_description/latex_documentation/main.tex
@@ -5,6 +5,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage{subfiles}
+\usepackage{pdfpages}
 
 \begin{document}
   \begin{titlepage}
