--- a/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
@@ -1,6 +1,4 @@
-\chapter{Wnioski} \label{chap:conclusions}
-
-\section{Podrozdział}
+\chapter{Teza} \label{chap:thesis}
 
 \bt
 
@@ -10,4 +8,8 @@
 
 \section{Podrozdział}
 
-\bt
+\bt 
+
+\section{Podrozdział}
+
+\bt 
