--- a/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
@@ -1,4 +1,8 @@
-\chapter{Wnioski} \label{chap:conclusions}
+\chapter{Implementacja} \label{chap:implementation}
+
+\section{Podrozdział}
+
+\bt
 
 \section{Podrozdział}
 
