--- a/project_description/new_latex_documentation/msc-docs-template/main.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/main.tex
@@ -45,10 +45,10 @@
 \tableofcontents
 
 \include{1-intro}
-\include{2-problem-formulation}
-\include{3-solution-methodology}
-\include{4-software-docs}
-\include{5-result-evaluation}
+\include{2-state-of-the-art}
+\include{3-thesis}
+\include{4-implementation}
+\include{5-outcomes}
 \include{6-conclusions}
 
 \cleardoublepage % to ensure that the page reference is correct
@@ -71,4 +71,3 @@
 \bibliography{bibliography}
 
 \end{document}
-
