Improving state of the art skeletong

--- a/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
@@ -3,67 +3,106 @@
 \section{Planowanie ruchu na skrzyżowaniach}
 
 Zależność wydajności od rozmiaru problemu
-
+\newline
+\newline
 Szybkość zmian w środowisku uniemożliwia użycia algorytmu zajmującego dużo czasu
-
+\newline
+\newline
 Rozważana klasa problemów
-
+\newline
+\newline
 Porównanie metody deterministycznej i heurystycznej
-
+\newline
+\newline
 Konieczność użycia metody heurystycznej z powodu dużej złożoności
 
 \section{Planowanie ruchu przy użyciu świateł drogowych}
 
 Opis dotychczasowych modeli ruchu przy użyciu świateł drogowych na podstawie artykułu [1]
-
+\newline
+\newline
 Opis optymalizacji wprowadzonych do zarządzania sygnalizacją świetlną na podstawie artykułu [1]:
+  \newline
   - Synchronized Traffic Lights
+  \newline
   - Green Wave
+  \newline
   - Random Offset
-
+  \newline
+\newline
+\newline
 Porównanie powyższych optymalizacji na podstawie artykułu [1]
-
+\newline
+\newline
 Opis koordynacji ruchu przy użyciu algorytmu REAL TIME QUEUE LENGTH ESTIMATION: THE APTTC ALGORITHM na podstawie artykułu [7]:
+  \newline
   - Sterowanie adaptacyjne
+  \newline
   - Statystyczna optymalizacja
+  \newline
   - Estymacja na podstawia długości dynamicznej kolejki
+  \newline
 
 Porównanie powyższego rozwiązania z synchroniczną zmianą świateł.
+\newline
+\newline
 
 \section{Planowanie ruchu bez sygnalizacji świetlnej}
 
 Znajdowanie ścieżki za pomocą algorytmu Dijkstr'y na podstawie artykułu [2]
-
+\newline
+\newline
 Unikanie kolizji przy użyciu algorytmu Dijkstry' na podstawie artykułu [2]
-
+\newline
+\newline
 Planowanie ruchu za pomocą zmodyfikowanego algorytmu A* na podstawie artykułu [3]
-
+\newline
+\newline
 Planowanie ruchu za pomocą wielostanowego algorytmu A* oraz wielostanowego algorytmu Wavefront na podstawie artykułu [4]
-
+\newline
+\newline
 Autonomiczne podejśćie - użycie Automated Guided Vehicels.
-
+\newline
+\newline
 Planowanie ruchu oraz unikanie kolizji przy użyciu AGV na podstawie artykułu [8]
-
+\newline
+\newline
 Omówienie przykładu z użyciem AGV na podstawie artykułu [8]
-
+\newline
+\newline
 Omówienie agorytmów stosowanych do planowania drogi na podstawie artykułu [5]:
-- Dijkstra's Algorithm
-- Priority Queues
-- Bidirectional Search
-- A*
+  \newline
+  - Dijkstra's Algorithm
+  \newline
+  - Priority Queues
+  \newline
+  - Bidirectional Search
+  \newline
+  - A*
+  \newline
+\newline
+\newline
 
 \section{Użycie algorytmu A* do planowania ruchu}
 
 Omówienie użycia A* do rozwiązywania problemu znajdowania drogi na podstawie artykułu [6]
-
+\newline
+\newline
 Omówienie algorytmu A* na podstawie artykułu [6]
-
+\newline
+\newline
 Omówienie przykładu użycia Multi-Entity A* na podstawie artykułu [4]
-
+\newline
+\newline
 Omówienie złożoności Multi-Entity A* na powyższym.
+\newline
+\newline
 
 \section{Modyfikacje A*}
 
 Opis wielostanego A* na podstawie artykułu [4]
-
+\newline
+\newline
 Opis modyfikacji i użycia A* w artykule [3]
+\newline
+\newline
