--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -1,70 +1,71 @@
-@book{Demkowicz,
-	author = {Demkowicz, L.},
-	title = {Computing with hp adaptive finite element methods. Part I. Elliptic and Maxwell problems with applications},
-	publisher = {Taylor \& Francis, CRC Press},
-	year = {2006},
+@article{shaikh2013agv,
+  title={AGV Path Planning and Obstacle Avoidance Using Dijkstra’s Algorithm},
+  author={Shaikh, Er Atique and Dhale, Atul},
+  journal={International Journal of Application in Engineering and Mangement (IJAIEM)},
+  year={2013}
 }
 
-@book{Hughes,
-	author = {Cottrell, J. and Hughes, Thomas J. R. and Bazilevs, Y.},
-	title = {Isogeometric Analysis: Toward Integration of CAD and FEA},
-	year = {2009},
-	isbn = {0470748737, 9780470748732},
-	edition = {1st},
-	publisher = {Wiley Publishing},
+@article{brockfeld2001optimizing,
+  title={Optimizing traffic lights in a cellular automaton model for city traffic},
+  author={Brockfeld, Elmar and Barlovic, Robert and Schadschneider, Andreas and Schreckenberg, Michael},
+  journal={Physical Review E},
+  volume={64},
+  number={5},
+  pages={056132},
+  year={2001},
+  publisher={APS}
 }
 
-@article{Wozniak,
-	author = {Wo\'{z}niak, M. and Ku\'{z}nik, K. and Paszy\'{n}ski, M. and Calo, V.M. and Pardo, D.},
-	journal = {Computers and Mathematics with Applications},
-	title = {Computational cost estimates for parallel shared memory isogeometric multi-frontal solvers},
-	number = {10},
-	pages = {1864--1883},
-	volume = {67},
-	year = {2014},
+@article{munteanmobile,
+  title={Mobile Robot Navigation on Partially Known Maps using a Fast A Algorithm Version},
+  author={Muntean, Paul}
 }
 
-@article{Yu,
-	author = {Yu, Chenhan D. and Wang, Weichung and Pierce, Dan'l},
-	title = {A CPU-GPU Hybrid Approach for the Unsymmetric Multifrontal Method},
-	journal = {Parallel Comput.},
-	year = {2011},
-	volume = {37},
-	number = {12},
-	pages = {759--770},
-	publisher = {Elsevier Science Publishers B. V.},
+@article{wojnicki2015robust,
+  title={A robust planning algorithm for groups of entities in discrete spaces},
+  author={Wojnicki, Igor and Ernst, Sebastian and Turek, Wojciech},
+  journal={Entropy},
+  volume={17},
+  number={8},
+  pages={5422--5436},
+  year={2015},
+  publisher={Multidisciplinary Digital Publishing Institute}
 }
 
-@inproceedings{Lucas,
-	author = {Lucas, Robert F. and Wagenbreth, Gene and Davis, Dan M. and Grimes, Roger},
-	booktitle = {VECPAR},
-	pages = {71-82},
-	publisher = {Springer},
-	series = {Lecture Notes in Computer Science},
-	title = {Multifrontal Computations on GPUs and Their Multi-core Hosts.},
-	volume = 6449,
-	year = 2010
+@incollection{delling2009engineering,
+  title={Engineering route planning algorithms},
+  author={Delling, Daniel and Sanders, Peter and Schultes, Dominik and Wagner, Dorothea},
+  booktitle={Algorithmics of large and complex networks},
+  pages={117--139},
+  year={2009},
+  publisher={Springer}
 }
 
-@inproceedings{Krawezik,
-	title = {Accelerating the ANSYS Direct Sparse Solver with GPUs},
-	author = {Krawezik, G.P. and Poole, G.},
-	booktitle = {Symposium on Application Accelerators in High Performance Computing, SAAHPC},
-	year = 2009
+@article{dechter1985generalized,
+  title={Generalized best-first search strategies and the optimality of A},
+  author={Dechter, Rina and Pearl, Judea},
+  journal={Journal of the ACM (JACM)},
+  volume={32},
+  number={3},
+  pages={505--536},
+  year={1985},
+  publisher={ACM}
 }
 
-@article{Babuska1,
-	title = {The hp-version of the finite element method, Part I: The basic approximation results},
-	author = {Babu\v{s}ka, I. and Guo, B.},
-	journal = {Computational Mechanics},
-	year = 1986,
-	pages = {21--41}
+@inproceedings{athmaraman2005adaptive,
+  title={Adaptive predictive traffic timer control algorithm},
+  author={Athmaraman, Naren and Soundararajan, Srivathsan},
+  booktitle={Proceedings of the 2005 Mid-Continent Transportation Research Symposium},
+  year={2005}
 }
 
-@article{Babuska2,
-	title = {The hp-version of the finite element method, Part II: General results and applications},
-	author = {Babu\v{s}ka, I. and Guo, B.},
-	journal = {Computational Mechanics},
-	year = 1986,
-	pages = {203--220}
+@article{szczerba2000robust,
+  title={Robust algorithm for real-time route planning},
+  author={Szczerba, Robert J and Galkowski, Peggy and Glicktein, IS and Ternullo, Noah},
+  journal={IEEE Transactions on Aerospace and Electronic Systems},
+  volume={37},
+  number={3},
+  pages={869--878},
+  year={2000},
+  publisher={IEEE}
 }
