Addding 3 articles to SOTA

--- a/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
@@ -82,7 +82,38 @@ Porównanie powyższego rozwiązania z synchroniczną zmianą świateł.
 - którego rozwiązania używać a jakiej sytuacji
 \newline
 \newline
+Opis kierowania ruchem drogowym na jednym skrzyzowaniu. Autorzy artykulu \cite{de1998optimal} dla ulatwienia pomijaja swiatlo pomaranczowe:
+  \newline
+  - Optymalizacja swiatel za pomoca dwoch podanych funkcji polegajacych na optymalizacji kolejek na czterech pasach
+  \newline
+  - Rozwiazanie pomija element bezpieczenstwa jakim jest swiatlo pomaranczowe (w moim rozwiazaniu mozna je zapewnic)
 
+\newline
+\newline
+Kontrola ruchu drogowego za pomoca swiatel drogowych. Autorzy artykulu \cite{lammer2008self} zaproponowali zdecentralizowany algorytm bazujacy na krotkich prognozach ruchu:
+  \newline
+  - Optymalizacja swiatel za pomoca dwoch podanych funkcji polegajacych na optymalizacji kolejek na czterech pasach
+  - Liczona dlugosc swiatla zielonego w celu zwolnienia kolejki na pasie
+  \newline
+  - Limitacja - Zielone swiatla sa zapalone dluzej niz zwykle powinny
+  \newline
+  - Limitacja - Ruch jest optymizowany dla sytuacji "srednich", ktore tak na prawde nigdy nie wystepuja, przez co optymizacja nie jest optymalna dla aktualnej sytuacji
+  \newline
+  \newline
+Zarzadzanie swiatlami za pomoca komunikacji pojazdow miedzy soba \cite{ferreira2010self}
+\newline
+Wszystie auta musza byc wyposazone w:
+\newline
+  - Urzadzenia DSRC
+\newline
+  - Ta sama wersje mapy
+\newline
+  - GPS z dokladnoscia do pasa na ktorym sa
+\newline
+Siec bez przewodowa w kazdym z samochodow musi byc niezawodna.
+\newline
+Rozwiazanie w porownaniu do mojego jest kosztowne, jezeli chodzi o wyposazenie. Jest ono mozliwe takze tylko wtedy kiedy wszystkie auta sa odpowiednio wyposazone i sprawe.
+    
 \section{Planowanie ruchu bez sygnalizacji świetlnej}
 
 CEL:
