--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -69,3 +69,34 @@
   year={2000},
   publisher={IEEE}
 }
+
+@article{de1998optimal,
+  title={Optimal traffic light control for a single intersection},
+  author={De Schutter, Bart and De Moor, Bart},
+  journal={European Journal of Control},
+  volume={4},
+  number={3},
+  pages={260--276},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{lammer2008self,
+  title={Self-control of traffic lights and vehicle flows in urban road networks},
+  author={L{\"a}mmer, Stefan and Helbing, Dirk},
+  journal={Journal of Statistical Mechanics: Theory and Experiment},
+  volume={2008},
+  number={04},
+  pages={P04019},
+  year={2008},
+  publisher={IOP Publishing}
+}
+
+@inproceedings{ferreira2010self,
+  title={Self-organized traffic control},
+  author={Ferreira, Michel and Fernandes, Ricardo and Concei{\c{c}}{\~a}o, Hugo and Viriyasitavat, Wantanee and Tonguz, Ozan K},
+  booktitle={Proceedings of the seventh ACM international workshop on VehiculAr InterNETworking},
+  pages={85--90},
+  year={2010},
+  organization={ACM}
+}
