--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -100,3 +100,53 @@
   year={2010},
   organization={ACM}
 }
+
+@misc{gazis1997optimal,
+  title={Optimal and stable route planning system},
+  author={Gazis, D.C. and Jaffe, R.S. and Pope, W.G.},
+  url={https://www.google.com/patents/US5610821},
+  year={1997},
+  month=mar # "~11",
+  publisher={Google Patents},
+  note={US Patent 5,610,821}
+}
+
+@misc{broxmeyer1994vehicle,
+  title={Vehicle longitudinal control and collision avoidance system for an automated highway system},
+  author={Broxmeyer, C.},
+  url={https://www.google.com/patents/US5369591},
+  year={1994},
+  month=nov # "~29",
+  publisher={Google Patents},
+  note={US Patent 5,369,591}
+}
+
+@article{kanoh2007dynamic,
+  title={Dynamic route planning for car navigation systems using virus genetic algorithms},
+  author={Kanoh, Hitoshi},
+  journal={International Journal of Knowledge-based and Intelligent Engineering Systems},
+  volume={11},
+  number={1},
+  pages={65--78},
+  year={2007},
+  publisher={IOS Press}
+}
+
+@article{fleischmann2004dynamic,
+  title={Dynamic vehicle routing based on online traffic information},
+  author={Fleischmann, Bernhard and Gnutzmann, Stefan and Sandvo{\ss}, Elke},
+  journal={Transportation science},
+  volume={38},
+  number={4},
+  pages={420--433},
+  year={2004},
+  publisher={INFORMS}
+}
+
+@inproceedings{huang2013improved,
+  title={An improved Dijkstra shortest path algorithm},
+  author={Huang, Yizhen and Yi, Qingming and Shi, Min},
+  booktitle={Proceedings of the 2nd International Conference on Computer Science and Electronics Engineering (ICCSEE)},
+  pages={0226--0229},
+  year={2013}
+}
