--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -150,3 +150,31 @@
   pages={0226--0229},
   year={2013}
 }
+
+@inproceedings{elhalawany2013modified,
+  title={Modified A* algorithm for safer mobile robot navigation},
+  author={ElHalawany, Basem M and Abdel-Kader, Hala M and TagEldeen, Adly and Elsayed, Alaa Eldeen and Nossair, Zaki B},
+  booktitle={Modelling, Identification \& Control (ICMIC), 2013 Proceedings of International Conference on},
+  pages={74--78},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{oleiwi2014modified,
+  title={Modified Genetic Algorithm based on A* algorithm of Multi objective optimization for Path Planning},
+  author={Oleiwi, B Kadhim and Hubert, R and Kazem, B},
+  booktitle={6th International Conference on Computer and Automation Engineering},
+  volume={2},
+  number={4},
+  pages={357--362},
+  year={2014}
+}
+
+@article{leena2014survey,
+  title={A survey on path planning techniques for autonomous mobile robots},
+  author={Leena, N and Saju, KK},
+  journal={IOSR Journal of Mechanical and Civil Engineering (IOSR-JMCE)},
+  volume={8},
+  pages={76--79},
+  year={2014}
+}
